MULTIPLATFORM-APPS: modify the routing login to include secure routes and persistent log in on web
